# seetaface6JNIToAPP

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/ylz/seetaface/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  seetaface.hpp  seetaface_jni.cpp  tools.cpp  tools.h
app/src/main/java/com/ylz/seetaface/: MainActivity.java  SeetaFace.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/ylz/seetaface/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
